--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -8,7 +8,7 @@
   <fragment
     android:id="@+id/FirstFragment"
     android:label="@string/first_fragment_label"
-    android:name="edu.cnm.deepdive.gallery12.FirstFragment"
+    android:name="edu.cnm.deepdive.gallery12.controller.FirstFragment"
     tools:layout="@layout/fragment_first">
 
     <action
@@ -18,7 +18,7 @@
   <fragment
     android:id="@+id/SecondFragment"
     android:label="@string/second_fragment_label"
-    android:name="edu.cnm.deepdive.gallery12.SecondFragment"
+    android:name="edu.cnm.deepdive.gallery12.controller.SecondFragment"
     tools:layout="@layout/fragment_second">
 
     <action
