File upload alert dialog in progress.

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -5,6 +5,16 @@
   android:id="@+id/nav_graph"
   app:startDestination="@id/FirstFragment">
 
+  <action
+    android:id="@+id/open_upload_properties"
+    app:destination="@id/upload_properties_fragment">
+
+    <argument
+      android:name="content_uri"
+      app:argType="android.net.Uri"/>
+
+  </action>
+
   <fragment
     android:id="@+id/FirstFragment"
     android:label="@string/first_fragment_label"
@@ -14,7 +24,9 @@
     <action
       android:id="@+id/action_FirstFragment_to_SecondFragment"
       app:destination="@id/SecondFragment"/>
+
   </fragment>
+
   <fragment
     android:id="@+id/SecondFragment"
     android:label="@string/second_fragment_label"
@@ -24,5 +36,18 @@
     <action
       android:id="@+id/action_SecondFragment_to_FirstFragment"
       app:destination="@id/FirstFragment"/>
+
   </fragment>
+
+  <dialog
+    android:id="@+id/upload_properties_fragment"
+    android:name="edu.cnm.deepdive.gallery12.controller.UploadPropertiesFragment"
+    tools:layout="@layout/fragment_upload_properties">
+
+    <argument
+      android:name="content_uri"
+      app:argType="android.net.Uri"/>
+
+  </dialog>
+
 </navigation>
