Upload image file - file to larger error.

--- a/app/src/main/res/layout/fragment_upload_properties.xml
+++ b/app/src/main/res/layout/fragment_upload_properties.xml
@@ -5,68 +5,69 @@
   xmlns:app="http://schemas.android.com/apk/res-auto"
   android:layout_width="match_parent"
   android:layout_height="match_parent"
-  tools:context=".controller.UploadPropertiesFragment"
-  android:padding="8dp">
+  android:padding="@dimen/half_dynamic_spacing"
+  tools:context=".controller.UploadPropertiesFragment">
 
   <androidx.constraintlayout.widget.ConstraintLayout
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-  <ImageView
-    android:id="@+id/image"
-    android:layout_width="0dp"
-    android:layout_height="wrap_content"
-    android:scaleType="fitCenter"
-    android:adjustViewBounds="true"
-    android:layout_margin="@dimen/half_margin"
-    app:layout_constraintTop_toTopOf="parent"
-    app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintEnd_toEndOf="parent"
-    app:layout_constraintWidth_percent="0.65"
-    tools:ignore="ContentDescription"/>
-
-
-  <com.google.android.material.textfield.TextInputLayout
-    android:id="@+id/title_layout"
-    android:layout_width="0dp"
-    android:layout_height="wrap_content"
-    android:layout_margin="@dimen/half_margin"
-    app:hintEnabled="true"
-    app:hintAnimationEnabled="true"
-    app:layout_constraintTop_toBottomOf="@id/image"
-    app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintEnd_toEndOf="parent">
-
-    <com.google.android.material.textfield.TextInputEditText
-      android:id="@+id/title"
-      android:layout_width="match_parent"
+    <ImageView
+      android:id="@+id/image"
+      android:layout_width="0dp"
       android:layout_height="wrap_content"
-      android:hint="@string/title_of_image"
-      android:inputType="text"/>
+      android:scaleType="fitCenter"
+      android:adjustViewBounds="true"
+      android:layout_margin="@dimen/half_dynamic_spacing"
+      app:layout_constraintTop_toTopOf="parent"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintWidth_percent="0.5"
+      tools:ignore="ContentDescription"/>
 
-  </com.google.android.material.textfield.TextInputLayout>
 
-  <com.google.android.material.textfield.TextInputLayout
-    android:id="@+id/description_layout"
-    android:layout_width="0dp"
-    android:layout_height="wrap_content"
-    android:layout_margin="@dimen/half_margin"
-    app:hintEnabled="true"
-    app:hintAnimationEnabled="true"
-    app:layout_constraintTop_toBottomOf="@id/title_layout"
-    app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintEnd_toEndOf="parent">
-
-    <com.google.android.material.textfield.TextInputEditText
-      android:id="@+id/description"
-      android:layout_width="match_parent"
+    <com.google.android.material.textfield.TextInputLayout
+      android:id="@+id/title_layout"
+      android:layout_width="0dp"
       android:layout_height="wrap_content"
-      android:hint="@string/description_of_image"
-      android:inputType="textMultiLine"
-      android:minLines="3"
-      android:maxLines="3"/>
+      android:layout_margin="@dimen/half_dynamic_spacing"
+      app:hintEnabled="true"
+      app:hintAnimationEnabled="true"
+      app:layout_constraintTop_toBottomOf="@id/image"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintEnd_toEndOf="parent">
 
-  </com.google.android.material.textfield.TextInputLayout>
+      <com.google.android.material.textfield.TextInputEditText
+        android:id="@+id/title"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="@string/image_title_hint"
+        android:inputType="text"/>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
-  </ScrollView>
+    </com.google.android.material.textfield.TextInputLayout>
+
+    <com.google.android.material.textfield.TextInputLayout
+      android:id="@+id/description_layout"
+      android:layout_width="0dp"
+      android:layout_height="wrap_content"
+      android:layout_margin="@dimen/half_dynamic_spacing"
+      app:hintEnabled="true"
+      app:hintAnimationEnabled="true"
+      app:layout_constraintTop_toBottomOf="@id/title_layout"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintEnd_toEndOf="parent">
+
+      <com.google.android.material.textfield.TextInputEditText
+        android:id="@+id/description"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="@string/image_description_hint"
+        android:inputType="textMultiLine"
+        android:minLines="3"
+        android:maxLines="3"/>
+
+    </com.google.android.material.textfield.TextInputLayout>
+
+  </androidx.constraintlayout.widget.ConstraintLayout>
+
+</ScrollView>
