--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -12,5 +12,5 @@
     inner_frame_layout_padding (below variable) on round screens.
     -->
   <dimen name="inner_frame_layout_padding">5dp</dimen>
-  <dimen name="half_margin">8dp</dimen>
+  <dimen name="half_dynamic_spacing">8dp</dimen>
 </resources>
