Image display in progress.

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -13,4 +13,6 @@
     -->
   <dimen name="inner_frame_layout_padding">5dp</dimen>
   <dimen name="half_dynamic_spacing">8dp</dimen>
+  <dimen name="gallery_item_width">160dp</dimen>
+  <dimen name="half_margin">8dp</dimen>
 </resources>
