--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -18,8 +18,8 @@
   <fragment
     android:id="@+id/FirstFragment"
     android:label="@string/first_fragment_label"
-    android:name="edu.cnm.deepdive.gallery12.controller.FirstFragment"
-    tools:layout="@layout/fragment_first">
+    android:name="edu.cnm.deepdive.gallery12.controller.GalleryFragment"
+    tools:layout="@layout/fragment_gallery">
 
     <action
       android:id="@+id/action_FirstFragment_to_SecondFragment"
