--- a/app/src/main/res/menu/main_options.xml
+++ b/app/src/main/res/menu/main_options.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu
+  xmlns:android="http://schemas.android.com/apk/res/android">
 
   <item
     android:id="@+id/sign_out"
-    android:title="Sign out"
+    android:title="@string/sign_out"
     android:orderInCategory="999"/>
 </menu>
