--- a/app/src/main/res/layout/fragment_upload_properties.xml
+++ b/app/src/main/res/layout/fragment_upload_properties.xml
@@ -5,7 +5,7 @@
   xmlns:app="http://schemas.android.com/apk/res-auto"
   android:layout_width="match_parent"
   android:layout_height="match_parent"
-  android:padding="@dimen/half_dynamic_spacing"
+  android:padding="@dimen/half_margin"
   tools:context=".controller.UploadPropertiesFragment">
 
   <androidx.constraintlayout.widget.ConstraintLayout
@@ -18,7 +18,7 @@
       android:layout_height="wrap_content"
       android:scaleType="fitCenter"
       android:adjustViewBounds="true"
-      android:layout_margin="@dimen/half_dynamic_spacing"
+      android:layout_margin="@dimen/half_margin"
       app:layout_constraintTop_toTopOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
@@ -30,7 +30,7 @@
       android:id="@+id/title_layout"
       android:layout_width="0dp"
       android:layout_height="wrap_content"
-      android:layout_margin="@dimen/half_dynamic_spacing"
+      android:layout_margin="@dimen/half_margin"
       app:hintEnabled="true"
       app:hintAnimationEnabled="true"
       app:layout_constraintTop_toBottomOf="@id/image"
@@ -50,7 +50,7 @@
       android:id="@+id/description_layout"
       android:layout_width="0dp"
       android:layout_height="wrap_content"
-      android:layout_margin="@dimen/half_dynamic_spacing"
+      android:layout_margin="@dimen/half_margin"
       app:hintEnabled="true"
       app:hintAnimationEnabled="true"
       app:layout_constraintTop_toBottomOf="@id/title_layout"
