--- a/app/src/main/res/layout/fragment_upload_properties.xml
+++ b/app/src/main/res/layout/fragment_upload_properties.xml
@@ -38,7 +38,7 @@
       app:layout_constraintEnd_toEndOf="parent">
 
       <com.google.android.material.textfield.TextInputEditText
-        android:id="@+id/title"
+        android:id="@+id/gallery_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="@string/image_title_hint"
@@ -58,7 +58,7 @@
       app:layout_constraintEnd_toEndOf="parent">
 
       <com.google.android.material.textfield.TextInputEditText
-        android:id="@+id/description"
+        android:id="@+id/gallery_description"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="@string/image_description_hint"
