--- a/app/src/main/res/layout/item_gallery.xml
+++ b/app/src/main/res/layout/item_gallery.xml
@@ -1,32 +1,50 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<androidx.constraintlayout.widget.ConstraintLayout
   xmlns:android="http://schemas.android.com/apk/res/android"
   android:layout_width="match_parent"
   android:layout_height="wrap_content"
+  xmlns:app="http://schemas.android.com/apk/res-auto"
   android:orientation="vertical"
-  android:gravity="center"
   android:padding="@dimen/half_margin"
   xmlns:tools="http://schemas.android.com/tools">
 
   <ImageView
     android:id="@+id/image"
-    android:layout_width="match_parent"
+    android:layout_width="0dp"
     android:layout_height="wrap_content"
     android:scaleType="fitCenter"
     android:layout_marginTop="@dimen/half_margin"
     android:adjustViewBounds="true"
+    android:src="@drawable/gallery"
+    app:layout_constraintHorizontal_weight="1"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintTop_toTopOf="parent"
+    app:layout_constraintEnd_toStartOf="@id/gallery_title"
+    android:contentDescription="TODO"/>
+
+  <TextView
+    android:id="@+id/gallery_title"
+    android:layout_width="0dp"
+    android:layout_height="wrap_content"
+    android:layout_marginTop="@dimen/half_margin"
+    app:layout_constraintTop_toTopOf="parent"
+    app:layout_constraintStart_toEndOf="@id/image"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintHorizontal_weight="3"
+    android:text="@string/gallery_title"
+    style="@style/TitleText"
     />
 
   <TextView
-    android:id="@+id/title"
-    android:layout_width="match_parent"
+    android:id="@+id/gallery_description"
+    android:layout_width="0dp"
     android:layout_height="wrap_content"
-    android:layout_marginTop="@dimen/half_margin"/>
+    android:layout_marginTop="@dimen/half_margin"
+    android:gravity="start"
+    android:text="@string/description"
+    app:layout_constraintStart_toStartOf="@id/gallery_title"
+    app:layout_constraintTop_toBottomOf="@id/gallery_title"
+    app:layout_constraintEnd_toEndOf="@id/gallery_title"
+    style="@style/Description"/>
 
-  <TextView
-    android:id="@+id/description"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_marginTop="@dimen/half_margin"/>
-
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
