--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -13,4 +13,18 @@
   <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar"/>
   <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light"/>
 
+  <style name="TitleText" parent="AppTheme">
+    <item name="android:textSize">20sp</item>
+    <item name="android:textStyle">bold|italic</item>
+    <item name="android:textColor">@android:color/black</item>
+  </style>
+
+  <style name="Description" parent="AppTheme">
+    <item name="android:textSize">15sp</item>
+    <item name="android:textStyle">normal</item>
+    <item name="android:textColor">@android:color/black</item>
+    <item name="android:layout_margin">@dimen/half_margin</item>
+    <item name="android:padding">6dp</item>
+  </style>
+
 </resources>
