--- a/app/src/main/res/layout/fragment_upload_properties.xml
+++ b/app/src/main/res/layout/fragment_upload_properties.xml
@@ -38,7 +38,7 @@
       app:layout_constraintEnd_toEndOf="parent">
 
       <com.google.android.material.textfield.TextInputEditText
-        android:id="@+id/gallery_title"
+        android:id="@+id/image_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="@string/image_title_hint"
@@ -65,6 +65,26 @@
         android:inputType="textMultiLine"
         android:minLines="3"
         android:maxLines="3"/>
+
+    </com.google.android.material.textfield.TextInputLayout>
+
+    <com.google.android.material.textfield.TextInputLayout
+      android:id="@+id/gallery_title_layout"
+      android:layout_width="0dp"
+      android:layout_height="wrap_content"
+      android:layout_margin="@dimen/half_margin"
+      app:hintEnabled="true"
+      app:hintAnimationEnabled="true"
+      app:layout_constraintTop_toBottomOf="@id/description_layout"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintEnd_toEndOf="parent">
+
+      <com.google.android.material.textfield.TextInputEditText
+        android:id="@+id/gallery_title"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="@string/gallery_title_in_image"
+        android:inputType="text"/>
 
     </com.google.android.material.textfield.TextInputLayout>
 
