--- a/app/src/main/res/layout/item_image.xml
+++ b/app/src/main/res/layout/item_image.xml
@@ -11,8 +11,7 @@
     android:id="@+id/image_gallery"
     android:layout_width="0dp"
     android:layout_height="wrap_content"
-    app:layout_constraintHorizontal_weight="1"
-    android:scaleType="centerInside"
+    android:scaleType="fitCenter"
     android:adjustViewBounds="true"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toTopOf="parent"
@@ -23,9 +22,9 @@
     android:layout_width="0dp"
     android:layout_height="wrap_content"
     android:text="@string/image_title"
-    app:layout_constraintHorizontal_weight="3"
     app:layout_constraintStart_toEndOf="@id/image_gallery"
     app:layout_constraintTop_toTopOf="parent"
+    app:layout_constraintEnd_toEndOf="parent"
     android:layout_margin="@dimen/half_margin"
     style="@style/TitleText"/>
 
