--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,5 @@
   <dimen name="fab_margin">16dp</dimen>
   <dimen name="half_margin">8dp</dimen>
   <dimen name="gallery_item_width">160dp</dimen>
+  <dimen name="image_details_separator">15dp</dimen>
 </resources>
