--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -27,4 +27,10 @@
     <item name="android:padding">6dp</item>
   </style>
 
+  <style name="Image_Attribute" parent="AppTheme">
+    <item name="android:layout_margin">@dimen/half_margin</item>
+    <item name="android:textColor">@android:color/black</item>
+    <item name="android:textSize">15sp</item>
+  </style>
+
 </resources>
